# Otter

./: CMakeLists.txt  README.md
CMake/: HelperScripts.cmake
Include/Otter/: Otter.hpp
Include/Otter/Core/: Defines.hpp
Source/: CMakeLists.txt
Source/Core/: CMakeLists.txt
Tests/: CMakeLists.txt
Tests/Units/: CMakeLists.txt  CoreTest.cpp
